--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/drawer": "^7.0.18",
+    "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.10",
     "@react-navigation/stack": "^7.0.14",
     "expo": "~52.0.11",
@@ -18,6 +19,8 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-navigation": "^5.0.0"
